fault-injection/vs_fault_injection_delay.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews-vs
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v2
      weight: 50
    - destination:
        host: reviews 
        subset: v3
      weight: 50
    fault:
      delay:
        fixedDelay: 1s
        percentage:
          value: 100
